[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["HayatoTomita <nice.to.tom@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
tweepy = "3.6"
ipython = "7.15"
ipykernel = "5.3.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
